--- a/HelloWorld/assets/www/index.html
+++ b/HelloWorld/assets/www/index.html
@@ -1,10 +1,94 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Hello World</title>
-<script type="text/javascript" charset="utf-8" src="cordova-1.9.0.js"></script>
+<title>Hello World + Accelerometer</title>
+<script type="text/javascript" charset="utf-8" src="cordova-2.1.0.js"></script>
+<!-- accelerometer.getCurrentAcceleration -->
+<script type="text/javascript" charset="utf-8">
+	/*
+	// Wait for Cordova to load
+	//
+	document.addEventListener("deviceready", onDeviceReady, false);
+	
+	// Cordova is ready
+	//
+	function onDeviceReady() {
+	    navigator.accelerometer.getCurrentAcceleration(onSuccess, onError);
+	}
+	
+	// onSuccess: Get a snapshot of the current acceleration
+	//
+	function onSuccess(acceleration) {
+	   document.getElementById('current-acceleration').innerHTML += 'Acceleration X: ' + acceleration.x + '<br>' +
+	          'Acceleration Y: ' + acceleration.y + '<br>' +
+	          'Acceleration Z: ' + acceleration.z + '<br>' +
+	          'Timestamp: '      + acceleration.timestamp + '<br>';
+	}
+	
+	// onError: Failed to get the acceleration
+	//
+	function onError() {
+	    alert('onError!');
+	}
+	*/
+</script>
+<!-- accelerometer.getCurrentAcceleration -->
+
+<!-- accelerometer.watchAcceleration -->
+<script type="text/javascript" charset="utf-8">
+    // The watch id references the current `watchAcceleration`
+    var watchID = null;
+
+    // Wait for Cordova to load
+    //
+    document.addEventListener("deviceready", onDeviceReady, false);
+
+    // Cordova is ready
+    //
+    function onDeviceReady() {
+        startWatch();
+    }
+
+    // Start watching the acceleration
+    //
+    function startWatch() {
+
+        // Update acceleration every 3 seconds
+        var options = { frequency: 3000 };
+
+        watchID = navigator.accelerometer.watchAcceleration(onSuccess, onError, options);
+    }
+
+    // Stop watching the acceleration
+    //
+    function stopWatch() {
+        if (watchID) {
+            navigator.accelerometer.clearWatch(watchID);
+            watchID = null;
+        }
+    }
+
+    // onSuccess: Get a snapshot of the current acceleration
+    //
+    function onSuccess(acceleration) {
+        var element = document.getElementById('accelerometer');
+        element.innerHTML = 'Acceleration X: ' + acceleration.x + '<br />' +
+                            'Acceleration Y: ' + acceleration.y + '<br />' +
+                            'Acceleration Z: ' + acceleration.z + '<br />' +
+                            'Timestamp: '      + acceleration.timestamp + '<br />';
+    }
+
+    // onError: Failed to get the acceleration
+    //
+    function onError() {
+        alert('onError!');
+    }
+</script>
+<!-- accelerometer.watchAcceleration -->
 </head>
 <body>
 <h1>Hello World!</h1>
+<p id="current-acceleration">getCurrentAcceleration: <br></p>
+<div id="accelerometer">Waiting for accelerometer...</div>
 </body>
 </html>
